--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,6 @@
         @apply hover:text-orange-650 border-b-2 border-transparent hover:border-orange-650 py-1 px-3 cursor-pointer
     }
     .free-trial-btn {
-        @apply text-sm lg:text-xs bg-yellow-350 border border-yellow-700 rounded px-3 py-3 lg:py-0 lg:ml-10 h-12 lg:h-8 block lg:flex items-center w-full lg:w-auto text-center mt-5 lg:mt-0
+        @apply text-sm lg:text-xs bg-yellow-350 border border-yellow-700 rounded px-3 py-3 lg:py-0 lg:ml-10 h-12 lg:h-8 block lg:flex items-center w-full lg:w-auto text-center mt-5 lg:mt-0 hover:bg-yellow-500
     }
 }
